# Distributed-In-Memory-Data-Storage-and-Loader

./: .gitignore  CMakeLists.txt  README.md  config.txt  run.sh
apps/: main.cpp
include/: ClusterCoordinator.hpp  ConfigParser.hpp  NetworkMock.hpp  Record.hpp  StorageNode.hpp  StorageRouter.hpp  Types.hpp
src/: ClusterCoordinator.cpp  ConfigParser.cpp  NetworkMock.cpp  StorageNode.cpp  StorageRouter.cpp
